fix scrollbar issue

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -20,7 +20,7 @@
 #canvas1 {
     position: absolute;
     display: flex;
-    top: 45px;
+    margin-top: auto;
     left: 0;
     width: 100%;
     height: 100%;
@@ -57,6 +57,8 @@
     margin-top: 45px;
     padding: 0;
     background-color: rgba(51, 51, 51, 0.434);
+    overflow-x: hidden;
+    overflow-y: auto;
     z-index: 5;
 
 }
@@ -72,6 +74,10 @@
     width: 100%;
     justify-content: center;
     height: 50px;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: 9999;
 }
 
 
